# obol

./: .gitignore  README.md  VIDEO.md
circuits/liveness/: Nargo.toml  Prover.toml
circuits/liveness/src/: main.nr
contracts/: Cargo.toml
contracts/keeper_registry/: Cargo.toml
contracts/keeper_registry/src/: lib.rs
contracts/liveness_registry/: Cargo.toml
contracts/liveness_registry/src/: lib.rs  test.rs
contracts/liveness_registry/test_snapshots/test/: full_lifecycle_register_checkin_activate_claim.1.json  owner_is_set.1.json  wrong_beneficiary_cannot_claim.1.json
contracts/mock_token/: Cargo.toml
contracts/mock_token/src/: lib.rs
contracts/obol_verifier/: Cargo.toml
contracts/obol_verifier/src/: lib.rs
contracts/tools/input_gen/: Cargo.toml
contracts/tools/input_gen/src/: main.rs
contracts/vault_controller/: Cargo.toml
contracts/vault_controller/src/: lib.rs
deployments/: testnet.json
docs/: ARCHITECTURE.md
frontend/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/public/circuits/: liveness.json
frontend/scripts/: e2e-checkin.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/checkin/: page.tsx
frontend/src/app/claim/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/setup/: page.tsx
frontend/src/components/: BeneficiaryClaim.tsx  CheckIn.tsx  ConnectWallet.tsx  FaucetButton.tsx  KeeperWidget.tsx  Navbar.tsx  VaultSetup.tsx
frontend/src/lib/: config.ts  format.ts  identity.ts  prover.ts  stellar.ts  wallet.tsx
scripts/: README.md  build_circuit.sh  build_contracts.sh  demo.sh  deploy_testnet.sh  test.sh  verify_proof_testnet.sh
